[package]
name = "issues"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
argh = "0.1"
anyhow = "1"
radicle-keystore = "0"
serde_json = "1.0"
tracing-subscriber = "0.2"
lazy_static = "1.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
branch = "alexjg/collab-objects"

[dependencies.automerge]
git = "https://github.com/automerge/automerge-rs.git"
branch = "main"
