[package]
name = "issues"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
argh = "0.1"
anyhow = "1"
radicle-keystore = "0"
serde_json = "1.0"
tracing-subscriber = "0.2"
lazy_static = "1.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.librad]
#path = "../radicle-link/librad"
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "01ad3f4d1fa8506fce13521554428680214b5ec0"

[dependencies.automerge]
git = "https://github.com/automerge/automerge-rs.git"
branch = "main"

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"

